# indra-core

./: .gitignore  command_neo4j.txt  docker-compose.yml
backend/: Cargo.toml
backend/src/: main.rs  models.rs
backend/src/handlers/: auth.rs  graph.rs  mod.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: GraphViewer.tsx
