[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
neo4rs = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
bcrypt = "0.15"
jsonwebtoken = "9.2"
uuid = { version = "1.22.0", features = ["v4"] }
